log/build_2021-06-09_10-01-52/control_pkg/stderr.log
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In member function ‘void Control_PID_P1_node::subs_callback(interfaces::msg::ImgData_<std::allocator<void> >::SharedPtr) const’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:66:25: error: expected primary-expression before ‘>’ token
   66 |    obj1ang_msg=data_msg=>obj1_ang;
      |                         ^
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:66:26: error: ‘obj1_ang’ was not declared in this scope; did you mean ‘obj1y_msg’?
   66 |    obj1ang_msg=data_msg=>obj1_ang;
      |                          ^~~~~~~~
      |                          obj1y_msg
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:69:25: error: expected primary-expression before ‘>’ token
   69 |    obj2ang_msg=data_msg=>obj2_ang;
      |                         ^
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:69:26: error: ‘obj2_ang’ was not declared in this scope; did you mean ‘obj2y_msg’?
   69 |    obj2ang_msg=data_msg=>obj2_ang;
      |                          ^~~~~~~~
      |                          obj2y_msg
make[2]: *** [CMakeFiles/control_pid_p1_node.dir/build.make:63: CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/control_pid_p1_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
